==History

jerbil-0.1.7 31-May-2011

Update to JerbilService::Client to refactor and redesign the interface to remove use of
evals that would otherwise compromise security

jerbil-0.1.6 30-May-2011

Add option to JerbilService::Base to not set $SAFE > 0 where subclass needs to set it later

jerbil-0.1.5 17-May-2011

Added a backtrace to Supervisor to help debug!

jerbil-0.1.4 17-May-2011

Added the service_key method to Client to make it easier to get the key for the service

jerbil-0.1.3 17-May-2011

Added a log entry for invalid service keys

jerbil-0.1.2 17-May-2011

Added a check_key method to JerbilService::Base to hide key checking.
Cleaned up some unnecessary system logging in jerbil.

jerbil-0.1.1 02-May-2011

Minor changes to Client

jerbil-0.1.0 2-May-2011

Second release with a substantial number of changes and tweaks.

jerbil-0.0.8 17-Apr-2011

Further tweaks to initscript install option

jerbil-0.0.7 17-Apr-2011

Tweak to init script for install option

jerbil-0.0.6 17-Apr-2011

Fixed a few more typos and added install to init script

jerbil-0.0.5 16-Apr-2011

Fixed mess up in sbin/jerbild to get real local host server record

jerbil-0.0.4 16-Apr-2011

Minor changes to init scripts and correct spelling mistake on daemonize

jerbil-0.0.3a 16-Apr-2011

Initial release for system level testing only.


jerbil-0.0.2 1-Apr-2011

Made a few insignificant changes today
and that is all

jerbil-0.0.1 1-Apr-2011

Initial create, but never tagged!